nonCommercial/css/agency.css
/* ... */
.aboutImage{
    float: left;
    background-image: url('../img/AboutMeSquare.jpg');
    background-size: 275px 275px;
    background-repeat: no-repeat; 
    background-position: center;
    height: 275px;
    width: 100%;
}

#aboutMain > .text-muted{
    font-size: 18px;
    text-indent: 20px;
    margin-bottom: 10px;
    margin-left: 0px;  
    margin-top: 2%;
}

@media (min-width: 768px) {

    .aboutImage{
        background-image: url('../img/AboutMe.jpg');
        background-size: 100% 100%;
        background-repeat: no-repeat; 
        height: 600px;
        width: 400px;
        float: left;
    }
    #aboutMain{
        width: 40%;
        float:right;
    }
    #aboutMain > .text-muted{
        font-size: 18px;
        text-indent: 20px;
        margin-bottom: 10px;
        margin-left: 0px;  
        margin-top: 2%;
    }
    header .intro-text {
        padding-top: 300px;
        padding-bottom: 200px;
    }
    header .container{
        height: 800px;
    }	
    header .intro-text .intro-lead-in {
        font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
        font-style: italic;
        font-size: 60px;
        line-height: 60px;	
        margin-bottom: 25px;
    }
    header .intro-text .intro-heading {
        font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
        text-transform: uppercase;
        font-weight: 700;
        font-size: 75px;
        line-height: 75px;
        margin-bottom: 50px;
    }
}

section {
    padding: 50px 0;
}
section h2.section-heading {
    font-size: 40px;
    margin-top: 0;
    margin-bottom: 15px;
}
section h3.section-subheading {
    font-size: 16px;
    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-transform: none;
    font-style: italic;
    font-weight: 400;
    margin-bottom: 75px;
}
@media (min-width: 768px) {
    section {
        padding: 70px 0;
    }
}
.service-heading {
    margin: 15px 0;
    text-transform: none;
}
#portfolio .portfolio-item {
    margin: 0 0 15px;
    right: 0;
}
#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    max-width: 400px;
    margin: 0 auto;
}
#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    background: rgba(254, 209, 54, 0.9);
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: all ease 0.5s;
    -webkit-transition: all ease 0.5s;
    -moz-transition: all ease 0.5s;
}
#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 1;
}
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    width: 100%;
    height: 20px;
    font-size: 20px;
    text-align: center;
    top: 50%;
    margin-top: -12px;
    color: white;
}
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
    margin: 0;
}
#portfolio .portfolio-item .portfolio-caption {
    max-width: 400px;
    margin: 0 auto;
    background-color: white;
    text-align: center;
    padding: 25px;
    background-color: #fec503;
}
#portfolio .portfolio-item .portfolio-caption h4 {
    text-transform: none;
    margin: 0;
    color: white;
}

#portfolio .portfolio-item .portfolio-caption p {
    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-style: italic;
    font-size: 18px;
    margin: 0;
}

#portfolio * {
    z-index: 2;
}

#theKnot{
    height: 15%;
    width: 35%;
    margin-bottom: 5%;
}

#popPhoto{
    height: 15%;
    width: 30%;
    margin-bottom: 5%;
}

#fStop{
    height: 15%;
    width: 30%;
    margin-bottom: 5%;
}

#weddingWire{
    height:15%;
    width:30%;
    margin-bottom: 5%;
}

#location{
    margin-top: 0px;
    margin-bottom: 10px;
    width: 100%;
    height: 65%;
    padding-right: 20%;
    padding-left: 20%;
}

@media (min-width: 500px){
    #location{
        margin-top: 0px;
        margin-bottom: 0px;
        width: 100%;
        height: 35%;
        padding-right: 20%;
        padding-left: 20%;
    } 
}

@media (min-width: 768px) {
    #location > h2{
        margin-top: 5%;
    }

    #location{
        margin-top: 0px;
        margin-bottom: 0px;
        width: 100%;
        height: 25%;
        padding-right: 20%;
        padding-left: 20%;
    }
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }

    #theKnot{
        height: 15%;
        width: 25%;
        margin-bottom: 5%;
    }

    #popPhoto{
        height: 15%;
        width: 25%;
        margin-bottom: 5%;
    }

    #fStop{
        height: 15%;
        width: 25%;
        margin-bottom: 5%;
    }

    #weddingWire{
        height: 15%;
        width: 25%;
        margin-bottom: 5%;
    }
}
@media (min-width: 992px) {
    .logoClass{
        height: 45px;
        width: 275px;
        margin-top: -5px;
    }

    .aboutImage{
        background-image: url('../img/AboutMe.jpg');    
        background-size: 100% 100%;
        background-repeat: no-repeat; 
        height: 650px;
        width: 433px;
        float: left;
    }
    #aboutMain{
        width: 40%;
        float:right;
    }
    #aboutMain > .text-muted{
        font-size: 22px;
        text-indent: 25px;
        margin-bottom: 10px;
        margin-left: 0px;  
        margin-top: 2%;
    }

    #theKnot{   
        height: 45%;
        width: 70%;
        margin-bottom: 5%;
    }

    #popPhoto{
        height: 45%;
        width: 70%;
        margin-bottom: 5%;
    }

    #fStop{
        height: 45%;
        width: 70%;
        margin-bottom: 5%;
    }

    #weddingWire{
        height: 45%;
        width: 70%;
        margin-bottom: 5%;
        margin-top: 10%;
    }
}
/* ... */

